--- a/First.html
+++ b/First.html
@@ -38,6 +38,6 @@
 
      <a href="https://www.youtube.com/watch?v=GdXF8rJEm3k">A gift for you</a>
      <img src="D:\Aqtab Files\IMAGES\salah.jpeg" alt="A beautiful image" width="300" height="300">
-     <p> This is a new feature </p>
+     <p> This is a new feature (button) </p>
 </body>
 </html>
